# pybFoam

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  Allwmake  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  INSTALL.md  README.md  api.html  build-pybFoam.sh  changelog.html  conftest.py  contributing.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  sitemap.xml  usage.html
.github/workflows/: ci.yaml  compiler-support.yaml  openfoam.yml  pages.yaml  release.yaml
OpenFOAMGen/: .gitignore  README.md
OpenFOAMGen/OpenFOAMGen/: conanfile.py
OpenFOAMGen/test-conan/: conanfile.txt  test-boostReg-CreditCardNumber.cpp
_downloads/0de02a130c54c5c25b5e1fa980dc71be/: example_sample_line.ipynb
_downloads/520d71af18e2287b8b29abafcd8c0e37/: example_03_sampling_workflow.ipynb
_downloads/605d516b84c3d0de8760a5ed912a06cb/: example_01_getting_started.ipynb
_downloads/7db039cd2b45f099f2c6cdd467862ad6/: example_02_field_analysis.ipynb
_downloads/85c20438aa4cc077ed6841de8dbef3b0/: example_01_getting_started.py
_modules/: index.html
_sources/: api.rst.txt  changelog.rst.txt  contributing.rst.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt  sg_execution_times.rst.txt
_static/: documentation_options.js
application/: CMakeLists.txt
application/test/test-pythonNumpy/: Allwmake  CMakeLists.txt  test-pythonNumpy.C
application/test/test-pythonNumpy/Make/: files  options  options.temp
auto_how_to/: example_blockmesh.html  example_fvc_fvm_operators.html  example_read_dictionaries.html  example_sample_line.html  example_sample_plane.html  index.html  sg_execution_times.html
auto_tutorials/: example_01_getting_started.html  example_02_field_analysis.html  example_03_sampling_workflow.html  index.html  sg_execution_times.html
benchmark/: benchmark_expression_complex.py  benchmark_expression_vec_add.py  benchmark_expression_vec_add_4.py
cmake/: Dependencies.cmake  FindOpenFOAM.cmake  pybFoamEmbedConfig.cmake.in
docs/: README.md  _config.yml  api.rst  conf.py  index.md  index.rst  introduction.rst  usage.rst
examples/: fields_and_numpy.py
explanation/: architecture.html  openfoam_interop.html  sampling_configs.html  zero_copy_numpy.html
how-to/: parallel_runs.html  use_turbulence_thermo.html
reference/: api.html  build_system.html  cli_and_poe.html  installation.html  supported_versions.html
scripts/: clean_stubs.py  generate_stubs.py  generate_stubs.sh  pyInstall.sh
src/embeddingPython/: Allwmake  CMakeLists.txt  conanfile.py  pyInterp.C  pyInterp.H
src/embeddingPython/Make/: files  options  options.temp  options.template
src/pybFoam/: Allwmake  CMakeLists.txt  __init__.py  __init__.pyi  _version.pyi  conanfile.py  dict.py  fieldFunctions.py  fvc.pyi  geoFields.py  mesh_generation.pyi  meshing.pyi  postProcess.py  py.typed  pybFoam_core.pyi  runTimeTables.pyi  sampling.pyi  sampling_bindings.pyi  thermo.pyi  time_series.py  turbulence.pyi
src/pybFoam/Make/: files  options
src/pybFoam/aggregation/: CMakeLists.txt  aggregation.cpp  bind_aggregation.cpp  bind_aggregation.hpp
src/pybFoam/embed/: CMakeLists.txt  pyInterp.cpp  pyInterp.hpp  pybFoamEmbedConfig.cmake.in
src/pybFoam/fvc/: Allwmake  CMakeLists.txt  __init__.pyi  bind_fvc.cpp  bind_fvc.hpp  foam_fvc.C  foam_fvc.H  fvc.C  fvc.cpp  fvc.pyi
src/pybFoam/fvc/Make/: files  options.temp  options.template
src/pybFoam/fvm/: CMakeLists.txt  __init__.pyi  bind_fvm.cpp  bind_fvm.hpp  foam_fvm.C  foam_fvm.H  fvm.C  fvm.cpp  fvm.pyi
src/pybFoam/io/: model_base.py  system.py
src/pybFoam/meshing/: CMakeLists.txt  __init__.py  __init__.pyi  bind_blockmesh.cpp  bind_blockmesh.hpp  bind_checkmesh.cpp  bind_checkmesh.hpp  bind_snappy.cpp  bind_snappy.hpp  mesh_generation.C  mesh_utils.C  mesh_utils.H
src/pybFoam/pybFoam_core/: Allwmake  CMakeLists.txt  bind_cfdTools.cpp  bind_cfdTools.hpp  bind_control.cpp  bind_control.hpp  bind_dict.cpp  bind_dict.hpp  bind_dimensioned.cpp  bind_dimensioned.hpp  bind_fields.cpp  bind_fields.hpp  bind_fvMatrix.cpp  bind_fvMatrix.hpp  bind_fvmesh.cpp  bind_fvmesh.hpp  bind_geo_fields.cpp  bind_geo_fields.hpp  bind_io.cpp  bind_io.hpp  bind_mesh.cpp  bind_mesh.hpp  bind_polymesh.cpp  bind_polymesh.hpp  bind_primitives.cpp  bind_primitives.hpp  bind_pstream.cpp  bind_pstream.hpp  bind_time.cpp  bind_time.hpp  bind_wallDist.cpp  bind_wallDist.hpp  foam_cfdTools.C  foam_cfdTools.H  foam_control.C  foam_control.H  foam_dict.C  foam_dict.H  foam_dimensioned.C  foam_dimensioned.H  (+14 more)
src/pybFoam/pybFoam_core/Make/: files  options copy  options.gen  options.template
src/pybFoam/runTimeTables/: Allwmake  CMakeLists.txt  __init__.pyi  foam_runTimeTables.C  foam_runTimeTables.H  runTimeTables.C
src/pybFoam/runTimeTables/Make/: files  options  options.temp  options.template
src/pybFoam/sampling/: CMakeLists.txt  __init__.py  bind_sampling.cpp  bind_sampling.hpp  sampling.cpp  set_configs.py  surface_configs.py  utils.py
src/pybFoam/src/: foam_dict.C  foam_dict.H  foam_fields.C  foam_geo_fields.C  foam_primitives.C  foam_primitives.H  foam_runTimeTables.C
src/pybFoam/src/runTimeTables/: foam_runTimeTables.H  runTimeTables.C
src/pybFoam/thermo/: Allwmake  CMakeLists.txt  __init__.pyi  bind_thermo.cpp  bind_thermo.hpp  foam_thermo.C  foam_thermo.H  thermo.C  thermo.cpp
src/pybFoam/thermo/Make/: files  options  options.temp
src/pybFoam/turbulence/: Allwmake  CMakeLists.txt  __init__.pyi  bind_turbulence.cpp  bind_turbulence.hpp  foam_turbulence.C  foam_turbulence.H  turbulence.C  turbulence.cpp
src/pybFoam/turbulence/Make/: files  options  options.temp  options.template
src/pybFoam/vof/: CMakeLists.txt  bind_alphaEqn.cpp  bind_alphaEqn.hpp  bind_mixture.cpp  bind_mixture.hpp  bind_twoPhaseTransport.cpp  bind_twoPhaseTransport.hpp  vof.cpp  vof.pyi
tests/: test_sampling_models.py  test_sampling_set_configs.py
tests/embed_consumer/: CMakeLists.txt  smoke.cpp
(+383 files in other folders)
