[project]
name = "pybFoam"
version = "0.1.11"
authors = [
    {name = "Henning Scheufler", email = "henning.scheufler@web.de"},
]
description = "python bindings for OpenFOAM"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["OpenFOAM", "simulation", "CFD"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20",
    "pybind11>=2.6.0",
    "pydantic",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "pytest-xdist",
    "ruff>=0.14.2",
    "mypy",
    "cmake>=3.18",
    "pybind11-stubgen>=2.5",
    "mypy",
    "types-PyYAML",
    "poethepoet>=0.37.0",
    "pre-commit",
]
docs = [
    "sphinx>=4.0",
    "sphinx-sitemap",
    "furo",
    "sphinxcontrib-mermaid"
]
benchmark = [
    "jax",
    "seaborn",
    "matplotlib",
    "PyQt6",
    "tabulate"
]
all = [
    "pybFoam[dev,docs,benchmark]",
]

[project.urls]
Homepage = "https://github.com/HenningScheufler/pybFoam"
Repository = "https://github.com/HenningScheufler/pybFoam.git"
Issues = "https://github.com/HenningScheufler/pybFoam/issues"

[tool.setuptools]
include-package-data = true
zip-safe = false

[build-system]
requires = [
    "scikit-build-core[pyproject]>=0.4.3",
    "pybind11>=2.6.0",
    "cmake>=3.18"
]
build-backend = "scikit_build_core.build"


[tool.scikit-build]
cmake.version = ">=3.18"
cmake.build-type = "Release"
build.verbose = true
# Add build directory to contain CMake files
build-dir = "_skbuild"
editable.mode = "redirect"
editable.verbose = true
editable.rebuild = false


# CMake configuration
[tool.scikit-build.cmake.define]
PYBIND11_FINDPYTHON = "ON"
CMAKE_CXX_STANDARD = "17"
# Stub generation disabled by default
# Developers enable with: uv sync --all-extras -C cmake.define.ENABLE_PYBFOAM_STUBS=ON

# Generate stubs for better IDE support
[tool.scikit-build.experimental]
generate-type-stubs = true

[tool.pytest.ini_options]
addopts = "-ra -v -s"
testpaths = ["tests"]

[tool.mypy]
plugins = ["pydantic.mypy"]
mypy_path = ["src", "tests"]
files = ["src", "tests"]
strict = true
explicit_package_bases = true

[tool.ruff]
line-length = 100
target-version = "py38"
extend-exclude = ["build/", "dist/", "_skbuild/", "__pycache__/"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # Enable pycodestyle errors, pyflakes, and isort
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["pybFoam"]

[tool.poe.tasks]
test = "pytest"
lint = "ruff check"
format = "ruff format"
type_check = "mypy"
build_docs = "sphinx-build -b html docs docs/_build"
view_docs = { shell = "python -m webbrowser -t docs/_build/index.html" }
