[metadata]
name = pybFoam
version = attr: pybFoam._version.__version__
author = Henning Scheufler
home-page = https://github.com/DLR-RY/pybFoam
description = A lightweight framework that enables the packaging of OpenFOAM as co-simulation FMUs.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license-file = LICENSE
keywords = FMI OpenFOAM
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: End Users/Desktop
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Natural Language :: English
	Programming Language :: C++
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Scientific/Engineering

[options]
include_package_data = True
packages = find:
package_dir =
    =src
zip_safe = False
install_requires =
    pybind11

[options.packages.find]
where = src

[options.package_data]
pybFoam = 
	*.so
	*.pyi

# [options.entry_points]
# console_scripts = 
# 	pybFoam = pybFoam.__main__:cli_main

[options.extras_require]
tests = 
	pytest
	pyfmi
	fmpy

# [tool:pytest]
# markers =
# 	integration: marks integration tests
